tab 추가 list view format 변경 slash 추가 결과 페이지 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">medic</string>
+    <string name="title_activity_result_activitye">Result</string>
 </resources>
