결과 창 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">medic</string>
     <string name="title_activity_result_activitye">Result</string>
+    <string name="guide_what">what</string>
+    <string name="guide_how">how</string>
 </resources>
