--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">medic</string>
-    <string name="title_activity_result_activitye">Result</string>
-    <string name="guide_what">what</string>
-    <string name="guide_how">how</string>
+    <string name="search_hint_name">제품명을 입력하세요</string>
+    <string name="search_hint_indg">성분명을 입력하세요</string>
+    <string name="guide_what">무슨 약일까요?</string>
+    <string name="guide_how">어떻게 복용할까요?</string>
 </resources>
