shape 화면에 spinner, edittext 추가 제형, 색깔, 모양, 분할선, 문자 입력 할 수 있게 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">medic</string>
     <string name="search_hint_name">제품명을 입력하세요</string>
     <string name="search_hint_indg">성분명을 입력하세요</string>
+    <string name="search_hint_shape">문자를 입력하세요</string>
     <string name="guide_what">무슨 약일까요?</string>
     <string name="guide_how">어떻게 복용할까요?</string>
 </resources>
