--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_hint_shape">문자를 입력하세요</string>
     <string name="guide_what">무슨 약일까요?</string>
     <string name="guide_how">어떻게 복용할까요?</string>
+    <string name="button_search">찾기</string>
 </resources>
