--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="prompt_line">분할선을 선택하세요</string>
     <string name="about">About</string>
     <string name="feedback">Feedback</string>
-    <string name="about_info">이 앱은 룰루랄라 앱입니다.</string>
-    <string name="about_feedback">이메일 주소데스.\n나한테 연락주이소.</string>
+    <string name="version">Version</string>
+    <string name="about_info">MeDic(Medicine Dictionary)\n이 앱은 편의를 위해 만들어짐.\n약학정보원 참고</string>
+    <string name="about_feedback">Feedback을 주시면 참고하겠습니다.\n이용해 주셔서 감사합니다.\n이메일주소</string>
+    <string name="about_version">MeDic version 1.00</string>
 </resources>
