app name을 MeDic으로 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">medic</string>
+    <string name="app_name">MeDic</string>
     <string name="search_hint_name">제품명을 입력하세요</string>
     <string name="search_hint_indg">성분명을 입력하세요</string>
     <string name="search_hint_shape">문자를 입력하세요</string>
