--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="guide_what">무슨 약일까요?</string>
     <string name="guide_how">어떻게 복용할까요?</string>
     <string name="guide_store">이렇게 보관하세요</string>
+    <string name="guide_ref">출처</string>
+    <string name="guide_ref_content">약학정보원(http://www.health.kr)</string>
     <string name="button_search">찾기</string>
     <string name="prompt_type">제형을 선택하세요</string>
     <string name="prompt_color">색을 선택하세요</string>
@@ -19,8 +21,9 @@
         \n\n제공되는 그 어떤 정보도 의사, 약사 등 전문적인 판단을 대신 할 수 없습니다.
         \n\n정보활용에 있어 모든 책임은 이를 이용하는 본인에게 있으며 어떠한 사고 발생시에도 본 앱 제공자는 책임을 지지 않습니다.
         \n\n모든 정보는 약학정보원의 정보를 토대로 이루어져 있습니다.
-        \n자세한 정보는 아래 주소를 확인해주세요.
-        \n\nhttp://www.health.kr/</string>
+        \n자세한 정보는 아래 사이트에서 확인해주세요.
+        \n\n약학정보원
+        \nhttp://www.health.kr/</string>
     <string name="about_feedback">Review로 Feedback을 남겨주세요.\n참고하도록 하겠습니다.\n\n이용해 주셔서 감사합니다.\n\n</string>
-    <string name="about_version">MeDic version 0.8.4</string>
+    <string name="about_version">MeDic version 1.0.0</string>
 </resources>
