--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,12 +21,11 @@
         \n\n제공되는 그 어떤 정보도 의사, 약사 등 전문적인 판단을 대신 할 수 없습니다.
         \n\n정보활용에 있어 모든 책임은 이를 이용하는 본인에게 있으며 어떠한 사고 발생시에도 본 앱 제공자는 책임을 지지 않습니다.
         \n\n모든 정보는 약학정보원의 정보를 토대로 이루어져 있습니다.
-        \n자세한 정보는 아래 사이트에서 확인해주세요.
-        \n\n약학정보원
-        \nhttp://www.health.kr/</string>
+        \n자세한 정보는 아래 사이트에서 확인해주세요.\n\n
+        <a href="http://www.health.kr/">약학정보원</a></string>
     <string name="about_feedback">Review로 Feedback을 남겨주세요.
         \n참고하도록 하겠습니다.
         \n\n이용해 주셔서 감사합니다.\n\n
-        <a href='https://play.google.com/store/apps/details?id=com.uihyun.medic'>Review 남기러</a></string>
+        <a href="https://play.google.com/store/apps/details?id=com.uihyun.medic">Review 남기러</a></string>
     <string name="about_version">MeDic version 1.0.0</string>
 </resources>
