--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MeDic</string>
+    <string name="app_name">약먹자</string>
     <string name="search_hint_name">제품명을 입력하세요</string>
     <string name="search_hint_indg">성분명을 입력하세요</string>
     <string name="search_hint_shape">문자를 입력하세요</string>
@@ -17,15 +17,14 @@
     <string name="about">About</string>
     <string name="feedback">Feedback</string>
     <string name="version">Version</string>
-    <string name="about_info">MeDic(Medicine Dictionary)\n\n이 앱은 편의를 위해 만들어졌습니다.
+    <string name="about_info"><b>약먹자</b>\n\n이 앱은 편의를 위해 만들어졌습니다.
         \n\n제공되는 그 어떤 정보도 의사, 약사 등 전문적인 판단을 대신 할 수 없습니다.
         \n\n정보활용에 있어 모든 책임은 이를 이용하는 본인에게 있으며 어떠한 사고 발생시에도 본 앱 제공자는 책임을 지지 않습니다.
         \n\n모든 정보는 약학정보원의 정보를 토대로 이루어져 있습니다.
         \n자세한 정보는 아래 사이트에서 확인해주세요.\n\n
         <a href="http://www.health.kr/">약학정보원</a></string>
-    <string name="about_feedback">Review로 Feedback을 남겨주세요.
-        \n참고하도록 하겠습니다.
-        \n\n이용해 주셔서 감사합니다.\n\n
-        <a href="https://play.google.com/store/apps/details?id=com.uihyun.medic">Review 남기러</a></string>
-    <string name="about_version">MeDic version 1.0.0</string>
+    <string name="about_feedback">리뷰를 남겨주시면 감사하겠습니다.
+        \n이용해 주셔서 감사합니다.\n\n
+        <a href="https://play.google.com/store/apps/details?id=com.uihyun.medic">리뷰 남기러 가기</a></string>
+    <string name="about_version">약먹자 버전 \</string>
 </resources>
