버전 업. 검색 창에 예시 표시.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">약먹자</string>
-    <string name="search_hint_name">제품명을 입력하세요</string>
-    <string name="search_hint_indg">성분명을 입력하세요</string>
-    <string name="search_hint_shape">문자를 입력하세요</string>
+    <string name="search_hint_name">제품명을 입력하세요 (예, 타이레놀)</string>
+    <string name="search_hint_indg">성분명을 입력하세요 (예, 이부프로펜)</string>
+    <string name="search_hint_shape">문자를 입력하세요 (예, K)</string>
     <string name="guide_usage">용법·용량</string>
     <string name="guide_what">무슨 약일까요?</string>
     <string name="guide_how">어떻게 복용할까요?</string>
